style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

:root {
  --primary-color: #ef6900;
  --sky-blue: #b5d9ff;
  --off-white: #efeeec;
}

body {
  font-family: 'Montserrat', sans-serif;
  margin: 0px;
  text-align: center;
}

hr {
  margin: 1rem 0rem;
}

/** container **/

.container {
  padding-left: 1rem;
  padding-right: 1rem;
}

.container-center {
  max-width: 600px;
  margin: auto;
}

.container .container-center,
span {
  color: rgb(0, 153, 255);
}

/** links **/

.link {
  box-sizing: border-box;
  text-decoration: none;
  padding: 0.5rem 1rem;
}

.link-primary {
  background-color: var(--primary-color);
  border-radius: 0.5rem;
  color: var(--off-white);
}

.link-secondary {
  color: var(--primary-color);
  border-radius: 0.5rem;
  border: 1px solid var(--primary-color);
}

/** list **/

.list-non-bullet {
  list-style: none;
}

.list-item-inline {
  display: inline;
  padding: 0rem 0.5rem;
}

/** navigation **/

.navigation {
  background-color: var(--primary-color);
  color: white;
  padding: 1rem;
  border-bottom-left-radius: 1rem;
}

.navigation .nav-brand {
  font-weight: bold;
  text-align: left;
  font-size: 20px;
}

.navigation .nav-pills {
  text-align: right;
  font-size: 18px;
}

.navigation .link {
  color: white;
}

.navigation .link-active {
  font-weight: bold;
}

.nav-brand a {
  color: white;
  text-decoration: none;
}

/** header **/

.hero {
  padding-top: 3rem;
  padding-bottom: 0.5rem;
}

.hero .hero-img {
  max-width: 350px;
  display: block;
  margin: auto;
}

/** sections **/

.about .about-heading {
  padding-top: .2rem;
  color: var(--sky-blue);
  text-align: center;
}

.about .about-heading .about-inverted {
  color: var(--primary-color);
}

.section {
  padding: 2rem;
}

.section h1 {
  text-align: center;
}

.ow {
  background-color: var(--off-white);
}

.ow span {
  font-weight: bold;
  font-size: 18px;
  text-align: left;
}

.ow .skill-set {
  text-align: left;
}

/** footer **/

.footer {
  background-color: var(--primary-color);
  padding: 2rem 1rem;
  text-align: center;
  color: white;
  border-top-right-radius: 1rem;
}

.footer .link {
  color: white;
}

.footer .footer-header {
  font-weight: bold;
  font-size: large;
}

.footer ul {
  padding-inline-start: 0px;
}

@media only screen and (max-width: 500px) {
  .navigation .nav-brand {
    font-weight: bold;
    text-align: center;
    font-size: 20px;
  }

  .navigation .nav-pills {
    text-align: center;
    font-size: 18px;
  }

.link {
  padding: .2rem;
}

.link-primary {
  padding: 10px;
}
.link-secondary {
  padding: 5px;
}

}

